--- a/app/styles/feed.css
+++ b/app/styles/feed.css
@@ -3,7 +3,138 @@ body {
 }
 
 .main {
-  background-color: red;
-  width: 24rem;
+  width: 30rem;
   margin: 0 auto;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  padding:  0.5rem 0 0.5rem 0;
+  
+}
+.header{
+  display: grid;
+  grid-template-columns: repeat(12,1fr);
+  grid-template-rows: 5px 20px 5px;
+  height: 30px;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;
+  font-size: small;
+  font-weight: 100;
+}
+#logoInstagram{
+  grid-column: 1/3;
+  grid-row: 2/3;
+  padding: 0 0 0 1rem;
+  font-size: medium;
+  cursor: pointer;
+}
+#logoInstagram img{
+  width: 5rem;
+  height: 20px;
+}
+input{
+  height: 25px;
+  border-radius: 5px;
+  border: none;
+  background-color:rgba(239, 239, 239, 0.836) ;
+  grid-column:4/8 ;
+}
+
+#settingicons{
+  grid-column:9/10 ;
+  grid-row: 2/3;
+  cursor: pointer;
+
+}
+.header>div>img{
+  width: 15px;
+  height: 15px;
+  margin: 0 auto;
+}
+#settingicons2{
+  grid-column:10/11 ;
+  grid-row: 2/3;
+  cursor: pointer;
+
+}
+#settingicons3{
+  grid-column:11/12 ;
+  grid-row: 2/3;
+  cursor: pointer;
+
+}
+#settingicons4{
+  grid-column:12/-1 ;
+  grid-row: 2/3;
+  cursor: pointer;
+
+}
+.bodyPost{
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  margin: 20px;
+}
+#post{
+  width: 100px;
+  height: 150px;
+}
+
+.postHead{
+  width: 100%;
+  height: 35 px;
+  display: grid;
+  grid-template-columns: repeat(12 ,1fr);
+  grid-template-rows: 5px 25px 5px;
+}
+#postPic{
+  border: 1px;
+background-size: cover;
+  height: 250px;
+  background-color: blue;
+}
+.postHead{
+  display: grid;
+  grid-template-columns: repeat(12,1);
+}
+#cricelProfile{
+  grid-column: 1/2;
+  grid-row: 1/-1;
+}
+#namePage{
+  grid-column: 2/3;
+  grid-row: 2/3;
+  text-align: center;
+ font-size:small;
+ margin-top: 5px;
+}
+#threeDot{
+  grid-column: 12/-1;
+  grid-row: 2/3;
+  text-align: center;
+  cursor: pointer;
+}
+.underPost{
+  display: grid;
+  grid-template-columns: repeat(12,1fr);
+}
+#like{
+  grid-column: 1/2;
+}
+#comment{
+  grid-column:2/3;
+
+}
+#send{
+  grid-column: 3/4;
+
+}
+#saved{
+  grid-column: 12/-1;
+}
+.underPost>p>img{
+  width: 20px;
+  height: 20px;
+}
+.underPost>p{
+  text-align: center;
+}
+footer{
+  padding-left: 5
+  px;
 }
